{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 147,
  "lineage": "a2d26023-e43d-103d-f256-16db3e0db942",
  "resources": [
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03315493eb66b7d34",
            "public_dns": "ec2-15-164-117-119.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.117.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "eip_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c80dd079e3edfd85",
            "public_dns": "ec2-13-125-179-101.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.179.101",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "eip_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0479e9b99509736fd",
            "owner_id": "197966029048",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "igw_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03315493eb66b7d34",
            "id": "nat-026749fe308879878",
            "network_interface_id": "eni-0c3b739af86a415fd",
            "private_ip": "10.1.11.202",
            "public_ip": "15.164.117.119",
            "subnet_id": "subnet-000a9313331c62065",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "nat_asem",
              "Profile": "asem",
              "Stage": "asem"
            }
          },
          "depends_on": [
            "aws_eip.eip",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c80dd079e3edfd85",
            "id": "nat-016383a7138ac453c",
            "network_interface_id": "eni-0b6236bf32d6b4020",
            "private_ip": "10.1.12.34",
            "public_ip": "13.125.179.101",
            "subnet_id": "subnet-03c0413c9c7cce89c",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "nat_asem",
              "Profile": "asem",
              "Stage": "asem"
            }
          },
          "depends_on": [
            "aws_eip.eip",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a72eca5b418944b6",
            "owner_id": "197966029048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-026749fe308879878",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "rtb_private_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00312e3c2381394df",
            "owner_id": "197966029048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-016383a7138ac453c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "rtb_private_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0116a71f680157348",
            "owner_id": "197966029048",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0479e9b99509736fd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "rtb_public_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fdf422942eb12e9",
            "route_table_id": "rtb-0a72eca5b418944b6",
            "subnet_id": "subnet-0ed091701f869ba14"
          },
          "depends_on": [
            "aws_route_table.rtb_private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0062bf16436bd0254",
            "route_table_id": "rtb-00312e3c2381394df",
            "subnet_id": "subnet-066bd85927ff206b2"
          },
          "depends_on": [
            "aws_route_table.rtb_private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b190eda844630564",
            "route_table_id": "rtb-0116a71f680157348",
            "subnet_id": "subnet-000a9313331c62065"
          },
          "depends_on": [
            "aws_route_table.rtb_public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f59437d646514661",
            "route_table_id": "rtb-0116a71f680157348",
            "subnet_id": "subnet-03c0413c9c7cce89c"
          },
          "depends_on": [
            "aws_route_table.rtb_public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:197966029048:security-group/sg-0cb4ba57284fc4e80",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb4ba57284fc4e80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_asem_default",
            "name_prefix": null,
            "owner_id": "197966029048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "sg_default_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "timeouts": null,
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_endpoint",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:197966029048:security-group/sg-0e4ba9988bcb46852",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4ba9988bcb46852",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-06891dc67ef6e8e47",
                  "sg-0cb4ba57284fc4e80"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_asem_endpoint",
            "name_prefix": null,
            "owner_id": "197966029048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "sg_endpoint_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "timeouts": null,
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_security_group.sg_default",
            "aws_security_group.sg_lambda",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_lambda",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:197966029048:security-group/sg-06891dc67ef6e8e47",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06891dc67ef6e8e47",
            "ingress": [],
            "name": "sg_asem_lambda",
            "name_prefix": null,
            "owner_id": "197966029048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "sg_lambda_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "timeouts": null,
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_mongodb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:197966029048:security-group/sg-0bf5c775fbdcbaa29",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf5c775fbdcbaa29",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06891dc67ef6e8e47",
                  "sg-0cb4ba57284fc4e80"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "sg_asem_mongodb",
            "name_prefix": null,
            "owner_id": "197966029048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "sg_mongodb_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "timeouts": null,
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_security_group.sg_default",
            "aws_security_group.sg_lambda",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:197966029048:security-group/sg-041df17ab95d85224",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041df17ab95d85224",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_asem_ssh",
            "name_prefix": null,
            "owner_id": "197966029048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "sg_ssh_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "timeouts": null,
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:197966029048:security-group/sg-0a2b4ddd30e45a3d4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2b4ddd30e45a3d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_asem_web",
            "name_prefix": null,
            "owner_id": "197966029048",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "sg_web_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "timeouts": null,
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:197966029048:subnet/subnet-0ed091701f869ba14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0ed091701f869ba14",
            "map_public_ip_on_launch": false,
            "owner_id": "197966029048",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "private_subnet_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:197966029048:subnet/subnet-066bd85927ff206b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-066bd85927ff206b2",
            "map_public_ip_on_launch": false,
            "owner_id": "197966029048",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "private_subnet_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:197966029048:subnet/subnet-000a9313331c62065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.11.0/24",
            "id": "subnet-000a9313331c62065",
            "map_public_ip_on_launch": true,
            "owner_id": "197966029048",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "public_subnet_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:197966029048:subnet/subnet-03c0413c9c7cce89c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.12.0/24",
            "id": "subnet-03c0413c9c7cce89c",
            "map_public_ip_on_launch": true,
            "owner_id": "197966029048",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "public_subnet_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:197966029048:vpc/vpc-024db7bd246adab1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-06c2b0a949a5b3a3a",
            "default_route_table_id": "rtb-050840f325748c8c9",
            "default_security_group_id": "sg-0dda77b34efbb0fb4",
            "dhcp_options_id": "dopt-4d3ef126",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-024db7bd246adab1c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-050840f325748c8c9",
            "owner_id": "197966029048",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "vpc_asem",
              "Profile": "asem",
              "Stage": "asem"
            }
          }
        }
      ]
    },
    {
      "module": "module.asem",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.92.0.0/20",
              "52.219.60.0/23",
              "52.219.56.0/22"
            ],
            "id": "vpce-00dc2114a64cc6c1d",
            "owner_id": "197966029048",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "state": "available",
            "tags": {
              "Creator": "Terraform",
              "Desc": "Managed by Terraform",
              "Name": "endpoint_s3_asem",
              "Profile": "asem",
              "Stage": "asem"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-024db7bd246adab1c"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}